modification des images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="card mb-3 border-0 rounded-0">
           <div class="row ">
             <div class="col-md-6">
-              <img src="img/pexels-bluerhinomedia-2788792.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="img/carousel_1.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-6">
               <div class="card-body py-5 mt-5">
@@ -92,13 +92,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="img/pexels-naimbic-2291367.jpg" class="d-block w-100" alt="...">
+                    <img src="img/Card.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/pexels-life-of-pix-67468.jpg" class="d-block w-100" alt="...">
+                    <img src="img/card_3.jpg" class="d-block w-100" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="img/pexels-shvetsa-5953631.jpg" class="d-block w-100" alt="...">
+                    <img src="img/Card_4.jpg" class="d-block w-100" alt="...">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -118,7 +118,7 @@
         <div class="card mb-3 border-0 rounded-0">
           <div class="row ">
             <div class="col-md-6">
-              <img src="img/pexels-imin-technology-276315592-12935078.jpg" class="img-fluid rounded-start" alt="...">
+              <img src="img/Card_1.jpg" class="img-fluid rounded-start" alt="...">
             </div>
             <div class="col-md-6">
               <div class="card-body">
